# x-ear

./: .chromatic.config.json  .eslintrc.cjs  .gitignore  .gitignore.mirror  .pyre_configuration  .spectral.yaml  ADMIN_PANEL_FIXES.md  ADVANCED_DEEP_REPORT.md  ADVANCED_DEFINITIVE_REPORT.md  ADVANCED_FINAL_DEFINITIVE_REPORT.md  ADVANCED_FINAL_REPORT.md  ADVANCED_STABLE_REPORT.md  ADVANCED_TEST_REPORT.md  ADVANCED_TEST_REPORT_v4.md  ADVANCED_ULTIMATE_REPORT.md  ADVANCED_ULTIMATE_V2_REPORT.md  ADVANCED_ULTIMATE_V3_REPORT.md  ADVANCED_ULTIMATE_V4_REPORT.md  ADVANCED_ULTIMATE_V5_REPORT.md  ADVANCED_ULTIMATE_V6_REPORT.md  ADVANCED_ULTIMATE_V7_REPORT.md  ADVANCED_ULTIMATE_V9_REPORT.md  AI_CHAT_KULLANIM.md  AI_CHAT_OZET.md  AI_INFRASTRUCTURE_QA_REPORT.md  ALL_ENDPOINTS_TEST_REPORT_FINAL.md  ALL_ENDPOINTS_TEST_REPORT_NEW.md  ALL_FIXES_COMPLETE.md  API_CALL_AUDIT.md  API_FIX_PROGRESS.md  API_FIX_SUMMARY.md  API_TEST_ACTION_PLAN.md  API_TEST_ANALYSIS_REPORT.md  API_TEST_FINAL_ANALYSIS.md  API_TEST_FINAL_REPORT.md  API_TEST_STATUS_CURRENT.md  APPOINTMENT_FORM_FIXED.md  APPOINTMENT_SERVICE_FIXED.md  AUTH_ANALYSIS_REPORT.md  AUTOMATED_API_TESTING_SUMMARY.md  (+457 more)
.kiro/: PROJECT_RULES_EXHAUSTIVE.md  operation_id_evidence.md  operation_id_evidence_admin.md  operation_id_evidence_admin_addons.md  operation_id_evidence_admin_all.md  operation_id_evidence_admin_analytics.md  operation_id_evidence_admin_analytics_extracted.md  operation_id_evidence_auth.md  (+45 more)
apps/hbys-common/: pyproject.toml
apps/hbys-common/hbys_common/: __init__.py  auth.py  database.py  events.py  schemas.py  service_app.py
(+8365 files in other folders)
